Add address field to Supplier model and update forms and templates

--- a/myapp/milk_data/templates/milk_data/supplier_detail.html
+++ b/myapp/milk_data/templates/milk_data/supplier_detail.html
@@ -93,6 +93,9 @@
                         {{ supplier.warning_count|default:0 }}
                     </span>
                 </div>
+                <div class="header-item">
+                    <span class="item-label">Address</span>
+                    <span class="item-value">{{ supplier.address|default:"N/A" }}</span>
             </div>
         </section>
 
