--- a/myapp/milk_data/templates/milk_data/new_supplier.html
+++ b/myapp/milk_data/templates/milk_data/new_supplier.html
@@ -47,7 +47,13 @@
             {% endfor %}
           </select>
           <p class="error">{{ form.district.errors }}</p>
+        <div class="form-group">
+          <label for="address">Address</label>
+          <textarea name="address" id="address">{{ form.address.value|default:'' }}</textarea>
+          <p class="error">{{ form.address.errors }}</p> 
         </div>
+        </div>
+        
 
         <button type="submit" class="btn">Save Supplier</button>
       </form>
