Refactor and enhance templates and styles: update CSS, add action buttons, and improve message handling

--- a/myapp/milk_data/templates/milk_data/add_cow.html
+++ b/myapp/milk_data/templates/milk_data/add_cow.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Add New Cow</title>
-    <link rel="stylesheet" href="{% static 'milk_data/add_supplier.css' %}">    
+    <link rel="stylesheet" href="{% static 'milk_data/new_supplier.css' %}">    
 </head>
 <body>
     <div class="wrapper">
